--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Latihan GIT</title>
 </head>
 <body>
+    <header>Header</header>
     <h1>PT UD MAKMUR</h1>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consequuntur earum nesciunt voluptates reprehenderit hic explicabo tempore, ex fugit, suscipit labore delectus beatae. Nobis ab laboriosam cupiditate labore corrupti recusandae!</div>
+    <footer>Footer</footer>
 </body>
 </html>
