--- a/contact-us.html
+++ b/contact-us.html
@@ -9,6 +9,7 @@
     <header>Header Contact</header>
     <h1>PT UD MAKMUR</h1>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consequuntur earum nesciunt voluptates reprehenderit hic explicabo tempore, ex fugit, suscipit labore delectus beatae. Nobis ab laboriosam cupiditate labore corrupti recusandae!</div>
+    <form action=""></form>
     <footer>Footer</footer>
 </body>
 </html>
