--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <body>
     <header>Header About</header>
     <h1>PT UD MAKMUR</h1>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consequuntur earum nesciunt voluptates reprehenderit hic explicabo tempore, ex fugit, suscipit labore delectus beatae. Nobis ab laboriosam cupiditate labore corrupti recusandae!</div>
+    <div>Halaman About</div>
     <footer>Footer</footer>
 </body>
 </html>
