--- a/contact-us.html
+++ b/contact-us.html
@@ -8,7 +8,8 @@
 <body>
     <header>Header Contact</header>
     <h1>PT UD MAKMUR</h1>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus consequuntur earum nesciunt voluptates reprehenderit hic explicabo tempore, ex fugit, suscipit labore delectus beatae. Nobis ab laboriosam cupiditate labore corrupti recusandae!</div>
+    <div>Halaman Contact</div>
+    <div>Contoh perubahan baris 12</div>
     <footer>Footer</footer>
 </body>
 </html>
